[gd_scene load_steps=4 format=2]

[ext_resource path="res://Objects/Menu/obj_gameconfig.gd" type="Script" id=1]
[ext_resource path="res://Objects/HUD/font.tres" type="BitmapFont" id=2]
[ext_resource path="res://Objects/HUD/smallerfont.tres" type="BitmapFont" id=3]

[node name="obj_gameconfig" type="Node2D" groups=["obj_gameconfig"]]
z_index = 99
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 960.0
margin_bottom = 540.0
color = Color( 0, 0, 0, 1 )

[node name="Back" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.5 )
margin_left = 170.0
margin_top = 100.0
margin_right = 269.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 2 )
text = "BACK"
uppercase = true

[node name="StyleBar" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.5 )
margin_left = 300.0
margin_top = 100.0
margin_right = 636.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 2 )
text = "STYLE BAR: OFF"
uppercase = true

[node name="OldMach1" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.5 )
margin_left = 300.0
margin_top = 150.0
margin_right = 890.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 2 )
text = "MAY 2019 MACH 1 RUN: OFF"
uppercase = true

[node name="ShoulderBash" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.5 )
margin_left = 300.0
margin_top = 200.0
margin_right = 721.0
margin_bottom = 232.0
custom_fonts/font = ExtResource( 2 )
text = "SHOULDER BASH: OFF"
uppercase = true

[node name="OldGrab" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.5 )
margin_left = 300.0
margin_top = 250.0
margin_right = 721.0
margin_bottom = 282.0
custom_fonts/font = ExtResource( 2 )
text = "OLD GRAB: OFF"
uppercase = true

[node name="Description" type="Label" parent="."]
margin_top = 490.0
margin_right = 960.0
margin_bottom = 522.0
rect_min_size = Vector2( 960, 32 )
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1
uppercase = true
